[package]
name = "win32utils"
version = "0.2.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
description = "A collection of opinionated utilities for working with the Windows API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/The-Noah/win32utils"

[dependencies]

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
]
