[package]
name = "win32utils"
version = "0.3.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
description = "A collection of opinionated utilities for working with the Windows API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/The-Noah/win32utils"

[dependencies]

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]
